--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,14 @@
        android:shape="rectangle">
     <gradient
         android:angle="135"
+        android:centerColor="#0000FF"
+        android:endColor="#483D8B"
+        android:startColor="#1E90FF"
+        android:type="linear"/>
+    <!--<gradient
+        android:angle="135"
         android:centerColor="#4CAF50"
         android:endColor="#2E7D32"
         android:startColor="#81C784"
-        android:type="linear"/>
+        android:type="linear"/>-->
 </shape>
