--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,39 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <!--android:checkableBehavior="single"该属性可以保留点击的痕迹-->
-    <group >
-        <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import"/>
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery"/>
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow"/>
-        <item
-            android:id="@+id/bluetooth_connected"
-            android:icon="@drawable/ic_bluetooth_connected_grey_600_24dp"
-            android:title="@string/bluetooth_connected"/>
-    </group>
-
-    <item android:title="Communicate">
+    <!--功能-->
+    <item android:title="@string/drawer_group_function">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share"/>
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send"/>
+                android:id="@+id/bluetooth_connected"
+                android:icon="@drawable/ic_bluetooth_searching_grey_600_24dp"
+                android:title="@string/bluetooth_connected"
+                android:checkable="true"/>
+        </menu>
+    </item>
+    <!--选项-->
+    <item android:title="@string/drawer_group_options">
+        <menu>
             <item
                 android:id="@+id/preference_setting"
                 android:icon="@drawable/ic_settings_grey_600_24dp"
-                android:title="@string/preference_setting"/>
+                android:title="@string/preference_setting"
+                android:checkable="true"/>
         </menu>
     </item>
 
